tests/snapshots/integration_tests__stdlib_PreNormResidual.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron PreNormResidual(dim, dropout_rate):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  graph:
    in -> (main, skip)
    main -> LayerNorm#0(dim)
    LayerNorm#0(dim) -> Linear#1(dim, dim)
    Linear#1(dim, dim) -> Dropout#2(dropout_rate)
    Dropout#2(dropout_rate) -> processed
    (processed, skip) -> Add#3()
    Add#3() -> out
