tests/snapshots/integration_tests__stdlib_ResNetBasicBlock.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron ResNetBasicBlock(channels):
  inputs:
    default: [batch, channels, height, width]
  outputs:
    default: [batch, channels, height, width]
  graph:
    in -> (main, skip)
    main -> Conv2d#0(channels, channels, 3, 1, 1)
    Conv2d#0(channels, channels, 3, 1, 1) -> BatchNorm#1(channels)
    BatchNorm#1(channels) -> ReLU#2()
    ReLU#2() -> Conv2d#3(channels, channels, 3, 1, 1)
    Conv2d#3(channels, channels, 3, 1, 1) -> BatchNorm#4(channels)
    BatchNorm#4(channels) -> conv_out
    (conv_out, skip) -> Add#5()
    Add#5() -> added
    added -> ReLU#6()
    ReLU#6() -> out
