tests/snapshots/integration_tests__stdlib_SigmoidMoERouter.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron SigmoidMoERouter(dim, num_experts, active_experts, expert_dim):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  impl:
    Source: neuroscript,routing/SigmoidMoERouter
