tests/snapshots/integration_tests__stdlib_TransformerBlock.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron SimpleTransformerBlock(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> LayerNorm#0(dim)
    LayerNorm#0(dim) -> Linear#1(dim, dim)
    Linear#1(dim, dim) -> Dropout#2(0.1)
    Dropout#2(0.1) -> out

neuron TransformerBlock(dim, num_heads, d_ff):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  graph:
    in -> Fork#3()
    Fork#3() -> (skip1, attn_path)
    attn_path -> LayerNorm#4(dim)
    LayerNorm#4(dim) -> MultiHeadSelfAttention#5(dim, num_heads)
    MultiHeadSelfAttention#5(dim, num_heads) -> Dropout#6(0.1)
    Dropout#6(0.1) -> attn_out
    (skip1, attn_out) -> Add#7()
    Add#7() -> attn_residual
    attn_residual -> Fork#8()
    Fork#8() -> (skip2, ffn_path)
    ffn_path -> LayerNorm#9(dim)
    LayerNorm#9(dim) -> FFN#10(dim, d_ff)
    FFN#10(dim, d_ff) -> Dropout#11(0.1)
    Dropout#11(0.1) -> ffn_out
    (skip2, ffn_out) -> Add#12()
    Add#12() -> out
